[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-cli-maven"
version = "0.5.0.dev"
description = "Command line interface to talk to pulpcore's REST API. (Maven plugin commands)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv2+"}
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-cli<0.39,>=0.24.0",
  "pulp-glue-maven==0.5.0.dev",
]

[project.urls]
repository = "https://github.com/pulp/pulp-cli-maven"
changelog = "https://github.com/pulp/pulp-cli-maven/blob/main/CHANGES.md"

[project.entry-points."pulp_cli.plugins"]
maven = "pulpcore.cli.maven"

[tool.setuptools.packages.find]
# This section is managed by the cookiecutter templates.
where = ["src"]
include = ["pulpcore.cli.*"]
namespaces = true

[tool.setuptools.package-data]
# This section is managed by the cookiecutter templates.
"*" = ["py.typed"]


[tool.pulp_cli_template]
# This section is co-managed by the cookiecutter templates.
# Changes to existing keys should be preserved.
app_label = "maven"
src_layout = true
repository = "https://github.com/pulp/pulp-cli-maven"
glue = true
docs = false
translations = false
main_package = "maven"
binary_dependencies = ""
unittests = false
paralleltests = false

[tool.towncrier]
# This section is managed by the cookiecutter templates.
filename = "CHANGES.md"
directory = "CHANGES/"
title_format = "## {version} ({project_date}) {{: #{version} }}"
template = "CHANGES/.TEMPLATE.md"
issue_format = "[#{issue}](https://github.com/pulp/pulp-cli-maven/issues/{issue})"
start_string = "[//]: # (towncrier release notes start)\n"
underlines = ["", "", ""]

[[tool.towncrier.section]]
# This section is managed by the cookiecutter templates.
path = ""
name = ""

[[tool.towncrier.section]]
# This section is managed by the cookiecutter templates.
path = "pulp-glue-maven"
name = "Pulp-maven GLUE"

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "devel"
name = "Developer Notes"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "misc"
name = "Misc"
showcontent = true


[tool.pytest.ini_options]
markers = [
  "script: tests provided as shell scripts",
  "help_page: tests that render help pages",
  "pulp_maven: pulp_maven tests",
]

[tool.mypy]
# This section is managed by the cookiecutter templates.
strict = true
warn_unused_ignores = false
show_error_codes = true
files = "src/**/*.py, tests/**/*.py"
mypy_path = ["src", "pulp-glue-maven/src"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# This section is managed by the cookiecutter templates.
module = [
  "click_shell.*",
  "gnupg.*",
  "IPython.*",
  "schema.*",
]
ignore_missing_imports = true

[tool.bumpversion]
# This section is managed by the cookiecutter templates.
current_version = "0.5.0.dev"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<release>[a-z]+))?"
serialize = [
  "{major}.{minor}.{patch}.{release}",
  "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.release]
# This section is managed by the cookiecutter templates.
optional_value = "prod"
values = [
  "dev",
  "prod",
]

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pulp-glue-maven/src/pulp_glue/maven/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./src/pulpcore/cli/maven/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pulp-glue-maven/pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pyproject.toml"
search = "\"pulp-glue-maven=={current_version}\""
replace = "\"pulp-glue-maven=={new_version}\""


[tool.ruff]
# This section is managed by the cookiecutter templates.
line-length = 100

[tool.ruff.lint]
# This section is managed by the cookiecutter templates.
extend-select = ["I", "INT"]

[tool.ruff.lint.isort]
# This section is managed by the cookiecutter templates.
sections = { second-party = ["pulp_glue"] }
section-order = ["future", "standard-library", "third-party", "second-party", "first-party", "local-folder"]



[tool.uv.sources]
# This section is managed by the cookiecutter templates.
pulp-glue-maven = { workspace = true }

[tool.uv.workspace]
# This section is managed by the cookiecutter templates.
members = ["pulp-glue-maven"]

[tool.uv.build-backend]
# This section is managed by the cookiecutter templates.
module-name = ["pulpcore.cli"]
namespace = true
source-exclude = ["*.pot", "*.po", "**/*\\~"]


[dependency-groups]
# This section is managed by the cookiecutter templates.
dev = [
  {include-group = "lint"},
  "pylsp-mypy>=0.7.0",
  "pylsp-rope>=0.1.17,<0.1.18",
]
lint = [
  {include-group = "test"},
  "mypy~=1.20.0",
  "ruff~=0.15.1",
  "shellcheck-py~=0.11.0.1",
  "types-pygments",
  "types-pyyaml",
  "types-requests",
  "types-setuptools",
  "types-toml",
]
test = [
  "jinja2>=3.1.4,<3.2",
  "pygments>=2.19.2",
  "pytest>=7.0.0,<9.1",
  "pytest-xdist>=3.8.0,<3.9",
  "python-gnupg>=0.5.0,<0.6",
  "secretstorage>=3.5.0",
  "trustme>=1.1.0,<1.3",
]

